--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
                 </tr>
             </table>
           </div>
-          <div class="attribution">
-              Challenge by
-              <a
-                  href="https://www.frontendmentor.io?ref=challenge"
-                  target="_blank"
-                  >Frontend Mentor</a
-              >. Coded by <a href="https://github.com/Yocanantham">Yocanantham</a>.
-          </div>
         </main>
+        <div class="footer">
+            Challenge by
+            <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+            >. Coded by <a href="https://github.com/Yocanantham">Yocanantham K</a>.
+        </div>
     </body>
 </html>
